tests/baselines/reference/overloadOnGenericClassAndNonGenericClass(strict=true).errors.txt
overloadOnGenericClassAndNonGenericClass.ts(1,11): error TS7008: Member 'a' implicitly has an 'any' type.
overloadOnGenericClassAndNonGenericClass.ts(2,11): error TS7008: Member 'b' implicitly has an 'any' type.
overloadOnGenericClassAndNonGenericClass.ts(3,11): error TS7008: Member 'c' implicitly has an 'any' type.
overloadOnGenericClassAndNonGenericClass.ts(4,14): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
overloadOnGenericClassAndNonGenericClass.ts(5,12): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
overloadOnGenericClassAndNonGenericClass.ts(6,12): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
overloadOnGenericClassAndNonGenericClass.ts(9,12): error TS7006: Parameter 'a' implicitly has an 'any' type.
overloadOnGenericClassAndNonGenericClass.ts(14,12): error TS2454: Variable 'xs' is used before being assigned.


==== overloadOnGenericClassAndNonGenericClass.ts (8 errors) ====
    class A { a; }
              ~
!!! error TS7008: Member 'a' implicitly has an 'any' type.
    class B { b; }
              ~
!!! error TS7008: Member 'b' implicitly has an 'any' type.
    class C { c; }
              ~
!!! error TS7008: Member 'c' implicitly has an 'any' type.
    class X<T> { x: T; }
                 ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
    class X1 { x: string; }
               ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
    class X2 { x: string; }
               ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
    function f(a: X1): A;
    function f<T>(a: X<T>): B;
    function f(a): any {
               ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
    }
    
    var xs: X<string>;
    
    var t3 = f(xs);
               ~~
!!! error TS2454: Variable 'xs' is used before being assigned.
    var t3: A; // should not error
    